// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <DeveloperCard
      company="@Atolye15"
      followers={404}
      githubCreatedAt=""
      location={
        Object {
          "name": "İzmir",
          "slug": "izmir",
        }
      }
      name="Alpcan Aydın"
      profilePicture="https://avatars2.githubusercontent.com/u/1801024?v=4"
      repoText="Repo"
      repositoriesCount={23}
      totalStarred={612}
      username="alpcanaydin"
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/alpcanaydin"
            >
              <a
                href="/alpcanaydin"
                onClick={[Function]}
              >
                <Avatar
                  alt="Alpcan Aydın"
                  size="small"
                  url="https://avatars2.githubusercontent.com/u/1801024?v=4"
                >
                  <img
                    alt="Alpcan Aydın"
                    className="undefined"
                    src="https://avatars2.githubusercontent.com/u/1801024?v=4"
                  />
                </Avatar>
              </a>
            </Link>
            <div>
              <Link
                replace={false}
                to="/alpcanaydin"
              >
                <a
                  href="/alpcanaydin"
                  onClick={[Function]}
                >
                  <span>
                    Alpcan Aydın
                  </span>
                  <span>
                    alpcanaydin
                  </span>
                </a>
              </Link>
              <p>
                @Atolye15
              </p>
            </div>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/location/izmir"
            >
              <a
                className=""
                href="/location/izmir"
                onClick={[Function]}
              >
                İzmir
              </a>
            </Link>
            <span>
              612
               Star'lanma
            </span>
            <span>
              404
               Takipçi
            </span>
            <span>
              23
               
              Repo
            </span>
          </div>
        </div>
      </Box>
    </DeveloperCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with custom repo text 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <DeveloperCard
      company=""
      followers={404}
      githubCreatedAt=""
      location={
        Object {
          "name": "İzmir",
          "slug": "izmir",
        }
      }
      name="Alpcan Aydın"
      profilePicture="https://avatars2.githubusercontent.com/u/1801024?v=4"
      repoText="Java Reposu"
      repositoriesCount={23}
      totalStarred={612}
      username="alpcanaydin"
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/alpcanaydin"
            >
              <a
                href="/alpcanaydin"
                onClick={[Function]}
              >
                <Avatar
                  alt="Alpcan Aydın"
                  size="small"
                  url="https://avatars2.githubusercontent.com/u/1801024?v=4"
                >
                  <img
                    alt="Alpcan Aydın"
                    className="undefined"
                    src="https://avatars2.githubusercontent.com/u/1801024?v=4"
                  />
                </Avatar>
              </a>
            </Link>
            <div>
              <Link
                replace={false}
                to="/alpcanaydin"
              >
                <a
                  href="/alpcanaydin"
                  onClick={[Function]}
                >
                  <span>
                    Alpcan Aydın
                  </span>
                  <span>
                    alpcanaydin
                  </span>
                </a>
              </Link>
            </div>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/location/izmir"
            >
              <a
                className=""
                href="/location/izmir"
                onClick={[Function]}
              >
                İzmir
              </a>
            </Link>
            <span>
              612
               Star'lanma
            </span>
            <span>
              404
               Takipçi
            </span>
            <span>
              23
               
              Java Reposu
            </span>
          </div>
        </div>
      </Box>
    </DeveloperCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with github creation date 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <DeveloperCard
      company="@Atolye15"
      followers={404}
      githubCreatedAt="2012-05-31T22:02:23.000000Z"
      location={
        Object {
          "name": "İzmir",
          "slug": "izmir",
        }
      }
      name="Alpcan Aydın"
      profilePicture="https://avatars2.githubusercontent.com/u/1801024?v=4"
      repoText="Repo"
      repositoriesCount={23}
      totalStarred={612}
      username="alpcanaydin"
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/alpcanaydin"
            >
              <a
                href="/alpcanaydin"
                onClick={[Function]}
              >
                <Avatar
                  alt="Alpcan Aydın"
                  size="small"
                  url="https://avatars2.githubusercontent.com/u/1801024?v=4"
                >
                  <img
                    alt="Alpcan Aydın"
                    className="undefined"
                    src="https://avatars2.githubusercontent.com/u/1801024?v=4"
                  />
                </Avatar>
              </a>
            </Link>
            <div>
              <Link
                replace={false}
                to="/alpcanaydin"
              >
                <a
                  href="/alpcanaydin"
                  onClick={[Function]}
                >
                  <span>
                    Alpcan Aydın
                  </span>
                  <span>
                    alpcanaydin
                  </span>
                </a>
              </Link>
              <p>
                @Atolye15
              </p>
            </div>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/location/izmir"
            >
              <a
                className=""
                href="/location/izmir"
                onClick={[Function]}
              >
                İzmir
              </a>
            </Link>
            <span>
              612
               Star'lanma
            </span>
            <span>
              404
               Takipçi
            </span>
            <span>
              23
               
              Repo
            </span>
            <span
              className=""
            >
              1 Haziran 2012
            </span>
          </div>
        </div>
      </Box>
    </DeveloperCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with rank 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <DeveloperCard
      company="@Atolye15"
      followers={404}
      githubCreatedAt=""
      location={
        Object {
          "name": "İzmir",
          "slug": "izmir",
        }
      }
      name="Alpcan Aydın"
      profilePicture="https://avatars2.githubusercontent.com/u/1801024?v=4"
      rank={1}
      repoText="Repo"
      repositoriesCount={23}
      totalStarred={612}
      username="alpcanaydin"
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/alpcanaydin"
            >
              <a
                href="/alpcanaydin"
                onClick={[Function]}
              >
                <Avatar
                  alt="Alpcan Aydın"
                  size="small"
                  url="https://avatars2.githubusercontent.com/u/1801024?v=4"
                >
                  <img
                    alt="Alpcan Aydın"
                    className="undefined"
                    src="https://avatars2.githubusercontent.com/u/1801024?v=4"
                  />
                </Avatar>
              </a>
            </Link>
            <div>
              <Link
                replace={false}
                to="/alpcanaydin"
              >
                <a
                  href="/alpcanaydin"
                  onClick={[Function]}
                >
                  <span>
                    #
                    1
                  </span>
                  <span>
                    Alpcan Aydın
                  </span>
                  <span>
                    alpcanaydin
                  </span>
                </a>
              </Link>
              <p>
                @Atolye15
              </p>
            </div>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/location/izmir"
            >
              <a
                className=""
                href="/location/izmir"
                onClick={[Function]}
              >
                İzmir
              </a>
            </Link>
            <span>
              612
               Star'lanma
            </span>
            <span>
              404
               Takipçi
            </span>
            <span>
              23
               
              Repo
            </span>
          </div>
        </div>
      </Box>
    </DeveloperCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly without company 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <DeveloperCard
      company=""
      followers={404}
      githubCreatedAt=""
      location={
        Object {
          "name": "İzmir",
          "slug": "izmir",
        }
      }
      name="Alpcan Aydın"
      profilePicture="https://avatars2.githubusercontent.com/u/1801024?v=4"
      repoText="Repo"
      repositoriesCount={23}
      totalStarred={612}
      username="alpcanaydin"
    >
      <Box
        className=""
      >
        <div
          className=""
        >
          <div>
            <Link
              replace={false}
              to="/alpcanaydin"
            >
              <a
                href="/alpcanaydin"
                onClick={[Function]}
              >
                <Avatar
                  alt="Alpcan Aydın"
                  size="small"
                  url="https://avatars2.githubusercontent.com/u/1801024?v=4"
                >
                  <img
                    alt="Alpcan Aydın"
                    className="undefined"
                    src="https://avatars2.githubusercontent.com/u/1801024?v=4"
                  />
                </Avatar>
              </a>
            </Link>
            <div>
              <Link
                replace={false}
                to="/alpcanaydin"
              >
                <a
                  href="/alpcanaydin"
                  onClick={[Function]}
                >
                  <span>
                    Alpcan Aydın
                  </span>
                  <span>
                    alpcanaydin
                  </span>
                </a>
              </Link>
            </div>
          </div>
          <div>
            <Link
              className=""
              replace={false}
              to="/location/izmir"
            >
              <a
                className=""
                href="/location/izmir"
                onClick={[Function]}
              >
                İzmir
              </a>
            </Link>
            <span>
              612
               Star'lanma
            </span>
            <span>
              404
               Takipçi
            </span>
            <span>
              23
               
              Repo
            </span>
          </div>
        </div>
      </Box>
    </DeveloperCard>
  </Router>
</MemoryRouter>
`;
